change home page

--- a/public/home.html
+++ b/public/home.html
@@ -42,7 +42,8 @@
                                 <div class="t216__wrapper">
                                     <div class="t216__title t-title t-title_xl t-animate"
                                          data-animate-style="fadeindown" data-animate-group="yes" data-animate-order="2"
-                                         data-animate-delay="0.3" style="color:#ffffff;" field="title">空气净化器在线租赁
+                                         data-animate-delay="0.3" style="color:#ffffff;" field="title">
+                                        无锡加华枫林科技有限公司 净净空气净化器运营解决方案提供商
                                     </div>
                                     <div class="t216__descr t-descr t-descr_xl t216__descr_center t-animate"
                                          data-animate-style="fadeindown" data-animate-group="yes" data-animate-order="3"
@@ -115,15 +116,13 @@
         </div>
     </div>
 </div><!--/allrecords--><!-- Tilda copyright. Don't remove this line -->
-<div class="t-tildalabel " id="tildacopy" data-tilda-sign="504523#2318148"><a href="https://tilda.cc/?upm=504523"
-                                                                              class="t-tildalabel__link">
+<div class="t-tildalabel " id="tildacopy" data-tilda-sign="504523#2318148">
+
+    <a href="http://www.miitbeian.gov.cn/" class="t-tildalabel__link">
     <div class="t-tildalabel__wrapper">
-        <div class="t-tildalabel__txtleft">Made on</div>
-        <div class="t-tildalabel__wrapimg"><img src="https://static.tildacdn.com/img/tildacopy.png"
-                                                class="t-tildalabel__img"></div>
-        <div class="t-tildalabel__txtright">Tilda</div>
+        苏ICP备17015505号-1
     </div>
-</a>
+    </a>
 </div><!-- Stat -->
 </body>
 </html>
