change home page

--- a/public/home.html
+++ b/public/home.html
@@ -43,11 +43,12 @@
                                     <div class="t216__title t-title t-title_xl t-animate"
                                          data-animate-style="fadeindown" data-animate-group="yes" data-animate-order="2"
                                          data-animate-delay="0.3" style="color:#ffffff;" field="title">
-                                        无锡加华枫林科技有限公司 净净空气净化器运营解决方案提供商
+                                        加华枫林科技有限公司
                                     </div>
                                     <div class="t216__descr t-descr t-descr_xl t216__descr_center t-animate"
                                          data-animate-style="fadeindown" data-animate-group="yes" data-animate-order="3"
-                                         data-animate-delay="0.3" style="color:#ffffff;" field="descr">软硬件解决方案
+                                         data-animate-delay="0.3" style="color:#ffffff;" field="descr">
+                                        注重优化空气环境的应用方案及市场推广
                                     </div>
                                     <span class="space"></span></div>
                             </div>
@@ -74,11 +75,11 @@
         <div class="t473">
             <div class="t-container t-align_center">
                 <div class="t-col t-col_8 t-prefix_2">
-                    <div class="t473__title t-title t-name_xs t-margin_auto" field="title"
-                         style="color:#ffb62e;text-transform:uppercase;">关于我们
+                    <div class="t473__title t-title t-name_xs t-margin_auto" field="title" style="color:#ffb62e;text-transform:uppercase;">
+                        愿景
                     </div>
                     <div class="t473__descr t-descr t-descr_xxxl t-margin_auto" field="descr" style="font-size:30px;">
-                        无锡加华枫林科技有限公司，通过多年的不断的研发和积累，推出了净净空气净化器在线租赁解决方案。为棋牌室提供零投入，无风险，高回报的最优方案。
+                        为人们在日常生活，娱乐场所能享用一个洁净空气的舒适环境。公司提供良好的方案和优质的服务！
                     </div>
                 </div>
             </div>
@@ -110,7 +111,7 @@
                          field="title">联系我们
                     </div>
                     <div class="t574__text t-text t-descr_xl t574__bottom-margin_lg" style="color:#ffffff;"
-                         field="text">Phone: +86 18051573189<br/>E-mail: <strong>jiahuafengli@qq.com</strong></div>
+                         field="text">Phone: +86 18051573189<br/>E-mail: <strong>info@fenglinfl.com</strong></div>
                 </div>
             </div>
         </div>
